[package]
name = "moonlapse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
flexbuffers = "25.9.23"
hecs = "0.10.5"
log = "0.4.28"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
