[package]
name = "moonlapse-server"
version = "0.1.0"
edition = "2024"

[dependencies]
moonlapse-shared = { path = "../moonlapse-shared" }
anyhow = "1.0.100"
env_logger = "0.11.8"
hecs = "0.10.5"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
